--- a/asp_mvc_2/Views/Home/AdminOnly.cshtml
+++ b/asp_mvc_2/Views/Home/AdminOnly.cshtml
@@ -1,5 +1,11 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "AdminOnly";
     Layout = "~/Views/Shared/_Layout.cshtml";
 } 
 <h2>For Admin users only!</h2>
+
+<div id="divUserListContainer">
+    @Html.Action("ManageUserPartial", "Home");
+</div>
+
